Fix shorts player on mobile

--- a/ui/component/shortsActions/swipeNavigation/style.scss
+++ b/ui/component/shortsActions/swipeNavigation/style.scss
@@ -105,7 +105,7 @@
   overflow: visible;
 }
 
-button.shorts-mobile-panel__action-button.shorts-mobile-panel__action-button {
+.shorts-mobile-panel__action-button.shorts-mobile-panel__action-button {
   background: oklch(0.25 0 0 / 0.45);
   border: none;
   border-radius: 50%;
